--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
   }
   .left-online-dot{
     width: 8px; height: 8px; border-radius: 50%;
-    background: #0aa;
+    background: #00f;
   }
   .right-id{
     grid-column: 3;
