--- a/public/index.html
+++ b/public/index.html
@@ -199,8 +199,8 @@
 <!-- join overlay -->
 <div id="joinCta" role="button" tabindex="0">
   <div class="joinbox">
-    TAP TO JOIN PUBLIC CHAT
-    <div style="font-size:12px;margin-top:4px">press here to call</div>
+    ATTENTION: THIS SITE IS NOT TO BE USED DURING SCHOOL HOURS
+    <div style="font-size:12px;margin-top:4px">as of 9/12 you are not to access this site during school hours</div>
   </div>
 </div>
 
