--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
     <span>online: <span id="onlineCount">0</span></span>
   </div>
   <div class="disclaimer" role="note" aria-label="disclaimer">
-    disclaimer: use responsibly and when permitted to do so
+    disclaimer: this site is not to be used during school hours
   </div>
 </header>
 
